# predict-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PHASE2_NOTES.md  PHASE2_ORDERS_NOTES.md  PHASE3B_NOTES.md  README.md  install.sh
.github/workflows/: release.yml
cli/: Cargo.toml  README.md
cli/src/: approve_commands.rs  cli.rs  commands.rs  config_store.rs  ctf_commands.rs  data_commands.rs  gamma_commands.rs  main.rs  network_config.rs  networks.rs  order_commands.rs  output.rs  safe_create.rs  safe_exec.rs  setup_commands.rs  shell_commands.rs  wallet_commands.rs  ws_commands.rs  wusd_commands.rs
cli/src/networks/: monad.yaml
clob-client/: Cargo.toml  README.md
clob-client/src/: auth.rs  client.rs  endpoints.rs  error.rs  lib.rs  signer.rs  types.rs
clob-client/src/clob/: mod.rs  order_builder.rs  types.rs
clob-client/src/clob/ws/: client.rs  mod.rs  subscription.rs
clob-client/src/clob/ws/types/: mod.rs  request.rs  response.rs
clob-client/src/data/: client.rs  mod.rs  types.rs
clob-client/src/gamma/: client.rs  mod.rs
clob-client/src/gamma/types/: mod.rs  request.rs  response.rs
clob-client/src/relayer/: mod.rs  types.rs
clob-client/src/safe/: mod.rs  multisend.rs
clob-client/src/ws/: connection.rs
clob-client/tests/: auth_flow.rs  batch_reads.rs  gamma_http.rs  gamma_smoke.rs  golden_signer.rs  orders_http.rs  orders_sign_roundtrip.rs  ws_fixtures.rs  ws_market_smoke.rs  ws_offline.rs
clob-client/tests/fixtures/: golden.json
docs/: auth-flow.md  diff-vs-polymarket-v1.md  diff-vs-upstream-v1.md  gamma.md  orders.md  wallet.md  ws.md
examples/: config.toml
examples/networks/: monad-hermestrade.yaml
skills/predict/: SKILL.md
skills/predict/scripts/: ensure-cli.sh  market-snapshot.sh  preflight.sh
