[workspace]
resolver = "3"
members = [
    "clob-client",
    "cli",
]

[workspace.package]
edition = "2024"
rust-version = "1.88.0"
license = "MIT"
authors = ["ChainUp Prediction Market Team"]
repository = "https://github.com/chainupcloud/pm-rs"

[workspace.dependencies]
# crypto / chain
alloy = { version = "1.6.3", default-features = false, features = [
    "dyn-abi",
    "reqwest",
    "reqwest-rustls-tls",
    "serde",
    "signer-local",
    "signers",
    "sol-types",
] }
alloy-sol-types = "1.6.0"
hmac = "0.12.1"
sha2 = "0.10.9"
base64 = "0.22.1"
hex = "0.4.3"
uuid = { version = "1.23", features = ["serde", "v4"] }
secrecy = { version = "0.10", features = ["serde"] }

# async / http
tokio = { version = "1.50", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "webpki-roots", "http2", "charset", "query"] }
async-trait = "0.1"
futures = "0.3"

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_html_form = "0.4"
serde_with = { version = "3.18", features = ["chrono_0_4", "json"] }
rust_decimal = { version = "1.41", features = ["serde"] }
rust_decimal_macros = "1.40"
chrono = { version = "0.4", features = ["serde"] }

# misc
thiserror = "2"
anyhow = "1"
rand = "0.9"
url = "2"
tracing = "0.1"

# test
httpmock = "0.7"

# cli
clap = { version = "4", features = ["derive", "env"] }
tabled = "0.17"
dirs = "6"
rustyline = "15"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
