[package]
name = "pm-cli"
version = "0.1.0"
description = "Terminal client for pm-cup2026 (ChainUp prediction market)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "pm"
path = "src/main.rs"

[dependencies]
pm-rs-clob-client = { path = "../clob-client" }
alloy = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
rust_decimal = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tabled = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
