[package]
name = "predict-cli"
version = "0.1.0"
description = "Terminal client for pm-cup2026 (prediction market)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "predict-cli"
path = "src/main.rs"

[dependencies]
predict-rs-clob-client = { path = "../clob-client" }
alloy = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustyline = { workspace = true }
futures-util = { workspace = true }
rust_decimal = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tabled = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
