[package]
name = "pm-rs-clob-client"
version = "0.1.0"
description = "ChainUp pm-cup2026 CLOB Rust client SDK"
keywords = ["chainup", "polymarket", "clob", "prediction-market"]
categories = ["api-bindings", "finance", "web-programming::http-client"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
alloy = { workspace = true }
alloy-sol-types = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_html_form = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
httpmock = { workspace = true }
